--- a/digikala-sample/composer.json
+++ b/digikala-sample/composer.json
@@ -12,7 +12,8 @@
         "laravel/jetstream": "^2.4",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "myclabs/php-enum": "^1.8"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
