--- a/digikala-sample/composer.json
+++ b/digikala-sample/composer.json
@@ -13,13 +13,12 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
-        "myclabs/php-enum": "^1.8",
-        "ext-json": "*",
-        "ext-http": "*"
+        "myclabs/php-enum": "^1.8"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.4",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
