Menu init but with a big bug in submenu

--- a/digikala-sample/composer.json
+++ b/digikala-sample/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
-        "myclabs/php-enum": "^1.8"
+        "myclabs/php-enum": "^1.8",
+        "spatie/menu": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
