--- a/digikala-sample/package.json
+++ b/digikala-sample/package.json
@@ -20,5 +20,8 @@
         "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
         "tailwindcss": "^2.0.2"
+    },
+    "dependencies": {
+        "bootstrap-icons": "^1.6.1"
     }
 }
